kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
  labels:
    name: wordpress
    app: wordpress-gcp
